fix: copyright notice not centered when it's wrapped

--- a/src/app.scss
+++ b/src/app.scss
@@ -123,6 +123,7 @@ body {
   z-index: 20;
   transform: translate(-50%, 50%);
   font-size: clamp($min-font, $desired-font, $max-font);
+  text-align: center;
 }
 
 .wave {
